[package]
name = "task-queue"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
hyper = "1.6.0"
rand = "0.9.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
uuid = { version = "1.3.3", features = ["v4", "serde"] }
